# perf-eval

./: .gitmodules  Cargo.toml  Makefile  README.md  install-paper.sh  install_deps.sh  macro.sh  micro.sh  paper.sh  plot.py  pyproject.toml  report.sh  rerender.sh  run.sh  setup.sh
docs/: design.md
fixtures/dev-workflow/: commit-01-edit.cmds  commit-01-read.cmds  commit-01-search.cmds  commit-02-edit.cmds  commit-02-read.cmds  commit-02-search.cmds  commit-03-edit.cmds  commit-03-read.cmds  commit-03-search.cmds  commit-04-edit.cmds  commit-04-read.cmds  commit-04-search.cmds  commit-05-edit.cmds  commit-05-read.cmds  commit-05-search.cmds  overlayfs-ovl-file.json  tinyconfig-overlayfs.config
fixtures/mini-dev-workflow/: commit-01-edit.cmds  commit-01-search.cmds  commit-02-edit.cmds  commit-02-read.cmds  commit-02-search.cmds  series.json
paper/: plot_checkpoint_scaling.py  plot_commit_time.py  plot_dev_workflow.py  plot_meta_ops.py  plot_style.py
scripts/: checkpoint.py  commit.py  dev_workflow.py  ops_meta.py  plot_checkpoint.py  plot_checkpoint_scaling.py  plot_commit.py  plot_commit_time.py  plot_dev.py  plot_dev_workflow.py  plot_meta_ops.py  plot_metadata.py  plot_ops_meta.py  plot_utils.py  setup_branchfs.sh  setup_btrfs.sh  setup_try.sh
src/: backend.rs  main.rs  profiler.rs  report.rs  workload.rs
src/backends/: agfs.rs  branchfs.rs  mod.rs  native.rs  overlayfs.rs  try_backend.rs  yolofs.rs
src/paper/: checkpoint.rs  checkpoint_scaling_figure.rs  commit.rs  commit_time_figure.rs  dev.rs  dev_workflow_figure.rs  fio.rs  fio_data_table.rs  mod.rs  (+4 more)
(+36 files in other folders)
