[package]
name = "agfs-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agfs-bench"
path = "src/main.rs"

[dependencies]
agfs = { path = ".." }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
inferno = "0.12"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mount", "signal", "process", "hostname"] }
plotly = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
